# soundboard

./: Cargo.toml  README.md
src/: as_hex.rs  audio.rs  default_config.toml  event.rs  input.rs  main.rs  manual.txt
