[package]
name = "soundboard"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21"
eframe = { version = "0.21.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
tracing-subscriber = "0.3"
rodio = "0.17.1"
postcard = "1.0.4"
serde = { version = "1.0.160", features = ["derive"] }
toml = "0.7.3"
strum_macros = "0.24"
strum = "0.24"
